- Aktualisiert auf zeit.cms 1.1.10 mit Syntax-Highlighting

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,10 @@ extends =
 parts = libxml2 libxslt lxml
         test i18n importchecker
 
+[stable-zope]
+zope.testbrowser = 3.4.0
+
+
 [test]
 recipe = zc.recipe.testrunner
 eggs = zeit.content.rawxml[test]
