--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ zope.testbrowser = 3.4.0
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zeit.content.rawxml[test]
+eggs = zeit.content.rawxml
 defaults = ['--tests-pattern', '^f?test$', 
             '-v', '-c']
 
