--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,11 @@
 [buildout]
 develop = .
-find-links = http://uter.gocept.com/mirror/
-             http://uter.gocept.com/~ctheune/download.zope.org/distribution
-extends = 
-    http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
-    http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
-parts = libxml2 libxslt lxml
-        test i18n importchecker
+extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
+parts = lxml test i18n importchecker
 
-[stable-zope]
-zope.testbrowser = 3.4.0
-
+[lxml]
+recipe = z3c.recipe.staticlxml
+egg = lxml
 
 [test]
 recipe = zc.recipe.testrunner
