- Alle ``test.py`` nach ``tests.py`` umbenannt.
- Keine eigene Translationdomain mehr, Übersetzungen via zeit.locales.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop = .
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
-parts = lxml test i18n importchecker
+parts = lxml test importchecker
 
 [lxml]
 recipe = z3c.recipe.staticlxml
@@ -10,17 +10,7 @@ egg = lxml
 [test]
 recipe = zc.recipe.testrunner
 eggs = zeit.content.rawxml
-defaults = ['--tests-pattern', '^f?test$', 
-            '-v', '-c']
-
-[i18n]
-recipe = lovely.recipe:i18n
-package = zeit.content.rawxml
-domain = zeit.content.rawxml
-location = src/zeit
-output = content/rawxml/locales
-zcml =
-  <include package="zeit.content.rawxml" file="ftesting.zcml" />
+defaults = ['-v', '-c']
 
 [importchecker]
 recipe = zc.recipe.egg
