Using ZTK versions and updated tests accordingly (re #6961)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,11 +1,7 @@
 [buildout]
 develop = .
-extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
+extends = versions/versions.cfg
 parts = lxml test importchecker
-
-[lxml]
-recipe = z3c.recipe.staticlxml
-egg = lxml
 
 [test]
 recipe = zc.recipe.testrunner
